fix: poertry config

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,8 +4,7 @@ FROM python:3.9
 RUN curl -sSL https://install.python-poetry.org | python3 -
 
 # Set Poetry environment variables
-ENV POETRY_HOME=/opt/poetry
-ENV POETRY_VIRTUALENVS_IN_PROJECT=true
+ENV POETRY_HOME=/root/.local
 ENV PATH="$POETRY_HOME/bin:$PATH"
 
 # Verify Poetry installation and PATH
@@ -18,15 +17,12 @@ WORKDIR /app
 COPY pyproject.toml poetry.lock ./
 
 # Install dependencies
-RUN poetry install
-
-# Set up the database with the necessary tables
-RUN poetry run bash ./prestart.sh
+RUN poetry install --no-root --no-dev
 
 # Copy the rest of the application
 COPY . .
 
 # Run the application
-CMD ["poetry", "run", "uvicorn", "app.main:app", "--reload"]
+CMD ["poetry", "run", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
 
 EXPOSE 8000
