--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 # Stage 1: Build the React app
-FROM node:16 AS build
+FROM node:18 AS build
 
 WORKDIR /app
 COPY package*.json ./
@@ -9,6 +9,6 @@ RUN npm run build
 
 # Stage 2: Serve the React app
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
